fix contrast

--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -48,7 +48,7 @@ small {
 }
 
 a, a:visited {
-  color: #1183d0;
+  color: #007ACC;
   text-decoration: none;
 }
 a:hover {
